if ("$ENV{CONFIG_RESTFUL_SAMPLE}" STREQUAL "y")
	if ("$ENV{CONFIG_OPENVINO}" STREQUAL "y")
		find_package (PkgConfig REQUIRED)
		pkg_check_modules (SQLITE3 REQUIRED sqlite3)
		pkg_check_modules (JSON_C REQUIRED json-c)
		if (NOT JSON_C_FOUND)
			message (FATAL_ERROR "json-c is not found")
			return ()
		endif ()
		find_library(smart_photo_LIBRARY NAMES libsmartphoto.so)
		if (NOT smart_photo_LIBRARY)
			message(FATAL_ERROR "libsmartphoto.so is not found")
			return()
		endif()
		find_path(smart_photo_INCLULDE NAMES ccai_smart_photo.h)
		if (NOT smart_photo_INCLULDE)
			message(FATAL_ERROR "ccai_smart_photo.h is not found")
			return()
		endif()

		message ("ok: " ${SQLITE3_LIBRARIES})
		message ("ok: " ${JSON_C_LIBRARIES})

		add_fcgi_binary(fcgi_smartphoto)
		target_include_directories(fcgi_smartphoto PRIVATE ${smart_photo_INCLULDE})
		target_link_libraries(fcgi_smartphoto PRIVATE ${smart_photo_LIBRARY})
		target_link_libraries(fcgi_smartphoto PRIVATE ${JSON_C_LIBRARIES})
	endif()
endif()
