if ("$ENV{CONFIG_RESTFUL_SAMPLE}" STREQUAL "y")
	if ("$ENV{CONFIG_OPENVINO}" STREQUAL "y")
		find_package (PkgConfig REQUIRED)
		pkg_check_modules (JsonC REQUIRED IMPORTED_TARGET json-c)
		find_package(SmartPhoto REQUIRED)

		add_fcgi_binary(fcgi_smartphoto)
		target_link_libraries(fcgi_smartphoto PRIVATE CCAI::SmartPhoto PkgConfig::JsonC)
	endif()
endif()
